--- a/src/less/module.less
+++ b/src/less/module.less
@@ -1,13 +1,17 @@
 @background-color: #EBEBEB;
 @border-color: #AAAAAA;
 @shadow-color: #8C8C8C;
+@input-color: #2293f7;
+@output-color: #eb8f00;
 .rounded-corners (@radius: 5px) {
   border-radius: @radius;
   -webkit-border-radius: @radius;
   -moz-border-radius: @radius;
 }
-input {
+.audio-ui-header input {
     background-color: @background-color;
+    margin: 0px 5px;
+    width: 145px;
 }
 .audio-ui-module {
     .rounded-corners;
@@ -16,14 +20,44 @@ input {
     width: 200px;
     background-color: @background-color;
 }
-.audio-ui-module .header{
-    margin: 3px;
+.audio-ui-header{
+    margin: 3px 3px 10px;
     
 }
-.audio-ui-module .header input {
+.audio-ui-header input {
     border: 0px;
 }
-.audio-ui-module .header i {
-    position: relative;
-    right: -7px;
+.audio-ui-header i {
+
+}
+.audio-ui-control {
+    .rounded-corners;
+    
+    margin: 2px auto;
+    padding: 2px;
+    border: 1px solid @border-color;
+    width: 180px;
+    
+}
+.audio-ui-row {
+    width: 100%;
+    margin: 5px 0px;
+}
+.audio-ui-input {
+    .rounded-corners(20px);
+    margin-left: -7px;
+    color: @input-color;
+    border: 1px solid @border-color;
+    
+}
+.audio-ui-output {
+    .rounded-corners(20px);
+    float: right;
+    margin-right: -7px;
+    color: @output-color;
+    border: 1px solid @border-color;
+}
+.audio-ui-footer {
+    height: 5px;
+    clear: both;
 }
