view oscillator and destination implementation.

--- a/src/less/module.less
+++ b/src/less/module.less
@@ -61,3 +61,22 @@
     height: 5px;
     clear: both;
 }
+#audio-ui-destination {
+    .rounded-corners;
+    background-color: @background-color;
+    width: max-content;
+    padding: 10px;
+    border: solid 1px @border-color;
+    box-shadow:2px 2px 9px @shadow-color;
+    
+    position: absolute;
+    right: 0%;
+    top: 50%;
+    
+
+}
+#audio-ui-destination .audio-ui-input {
+    position: relative;
+    top: -16px;
+    left: -10px
+}
